Add PUT and DELETE requests
