# routes/movies.js
@@ -1,10 +1,16 @@
 const router = require('express').Router();
 const movieController = require('../controllers/movies');
 
-// Get all the contacts
+// Get all the Movies
 router.get('/', movieController.getMovies);
 
-// Add Contact
+// Add Movies
 router.post('/', movieController.addMovies);
+
+// Update Movies
+router.put('/:id', movieController.updateMovie);
+
+// Delete Movies
+router.delete('/:id', movieController.deleteMovie);
 
 module.exports = router;
